# RepoGrader

./: README.md  main.py  pyproject.toml  requirements.txt
cq/: __init__.py  cli.py  config.py  models.py  runner.py
cq/analyzers/: architecture.py  complexity.py  duplication.py  lint.py  typing.py
cq/reporting/: json_report.py  markdown_report.py  schema.json  schema.py  validate.py
cq/utils/: ast_tools.py  fs.py
sample/: cq.yml
templates/: index.html
tests/: test_architecture.py  test_cli_smoke.py  test_complexity.py  test_duplication.py  test_lint_typing.py
