[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cq"
version = "0.1.0"
description = "Code Quotient CLI for deterministic quality analysis"
authors = [{name = "Code Quotient"}]
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.17",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cq = "cq.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E203"]

[tool.isort]
profile = "black"

